--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ h4 {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    /*background-image: url("./images/flat01.png");*/
+    background-image: url("/public/images/flat01.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -45,7 +45,7 @@ h4 {
 
 .Banner {
     height: 80px;
-    /*background-image: url("/images/flat01.png");*/
+    background-image: url("/public/images/flat01.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
